<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/insertNameID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginStart="17dp"
        android:ems="10"
        android:hint="@string/insert_name"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/insertNumberID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/initialMessageID" />

    <EditText
        android:id="@+id/insertDDIphoneID"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/ddi"
        android:inputType="number"
        android:textColor="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/insertNumberID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insertNameID" />

    <Button
        android:id="@+id/signInID"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/sign_in"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insertNumberID" />

    <EditText
        android:id="@+id/insertNumberID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/your_number"
        android:inputType="number"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/signInID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/insertDDIphoneID"
        app:layout_constraintTop_toBottomOf="@+id/insertNameID" />

    <ImageView
        android:id="@+id/appLogoID"
        android:layout_width="221dp"
        android:layout_height="0dp"
        android:layout_marginBottom="26dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/initialMessageID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/smslogologin" />

    <TextView
        android:id="@+id/initialMessageID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginStart="17dp"
        android:text="@string/initial_message"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/insertNameID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogoID" />

</android.support.constraint.ConstraintLayout>